--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,10 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["coverage_calc.ts"]
+  "include": [
+    "src/coverage_calc.ts",
+    "src/generateTestPlan.ts",
+    "src/generateTestRunResults.ts",
+    "src/generateTestReport.ts"
+  ]
 }
