Add yargs CLI options and improve report output
Introduces yargs for command-line argument parsing in coverage_calc.ts, allowing custom feature map and output directory paths, and a flag for RBT-only output. Updates package.json dependencies and scripts, and generates coverage reports in the specified output folder.

--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "1.0.0",
   "main": "coverage_calc.ts",
   "scripts": {
-  "build": "tsc",
+    "build": "tsc",
     "start": "node dist/coverage_calc.js",
     "fecov": "npm run build && node dist/coverage_calc.js",
-  "generateTestPlan": "npm run build && node dist/src/generateTestPlan.js",
-  "generateTestRunResults": "npm run build && node dist/src/generateTestRunResults.js",
-  "generateTestReport": "npm run build && node dist/src/generateTestReport.js"
+    "generateTestPlan": "npm run build && node dist/src/generateTestPlan.js",
+    "generateTestRunResults": "npm run build && node dist/src/generateTestRunResults.js",
+    "generateTestReport": "npm run build && node dist/src/generateTestReport.js"
   },
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "yargs": "^18.0.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.3.1",
+    "@types/yargs": "^17.0.33",
     "typescript": "^5.0.0"
   }
 }
