--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "fecov",
   "version": "1.0.0",
   "main": "coverage_calc.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/coverage_calc.js",
-    "fecov_coverage": "npm run build && node dist/coverage_calc.js",
-  "fecov_generateTestPlan": "npm run build && node dist/generateTestPlan.js",
-    "fecov_generateTestRunResults": "npm run build && node dist/generateTestRunResults.js",
-    "fecov_generateTestReport": "npm run build && node dist/generateTestReport.js"
+    "start": "node --loader ts-node/esm src/coverage_calc.ts",
+    "fecov_coverage": "npm run build && node --loader ts-node/esm src/coverage_calc.ts",
+    "fecov_generateTestPlan": "npm run build && node --loader ts-node/esm src/generateTestPlan.ts",
+    "fecov_generateTestRunResults": "npm run build && node --loader ts-node/esm src/generateTestRunResults.ts",
+    "fecov_generateTestReport": "npm run build && node --loader ts-node/esm src/generateTestReport.ts"
   },
   "dependencies": {
     "js-yaml": "^4.1.0",
@@ -18,6 +19,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.3.1",
     "@types/yargs": "^17.0.33",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "ts-node": "^10.9.1"
   }
 }
