--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": [
-    "src/coverage_calc.ts",
-    "src/generateTestPlan.ts",
-    "src/generateTestRunResults.ts",
-    "src/generateTestReport.ts"
-  ]
+  "include": ["src/**/*.ts"]
 }
