Add KSEF config and risk report generation
Added ksef.fecov.yml configuration and new risk report generator (generateRiskReport.ts) with corresponding npm script. Updated and renamed test config files, removed outdated central and stations coverage reports, and added new KSEF coverage reports.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "fecov_coverage": "npm run build && node --loader ts-node/esm src/coverage_calc.ts",
     "fecov_generateTestPlan": "npm run build && node --loader ts-node/esm src/generateTestPlan.ts",
     "fecov_generateTestRunResults": "npm run build && node --loader ts-node/esm src/generateTestRunResults.ts",
-    "fecov_generateTestReport": "npm run build && node --loader ts-node/esm src/generateTestReport.ts"
+  "fecov_generateTestReport": "npm run build && node --loader ts-node/esm src/generateTestReport.ts",
+  "fecov_rbt": "npm run build && node --loader ts-node/esm src/generateRiskReport.ts"
   },
   "dependencies": {
     "js-yaml": "^4.1.0",
