Refactor features and add FECOV RBT report generation
Updated ksef.fecov.yml to refactor and simplify feature definitions, focusing on API endpoints and acceptance criteria. Added new npm script 'fecov_FECOVRBT' for generating FECOV RBT reports and implemented src/generateFecovRBTReport.ts. Removed old coverage reports and added new FECOV RBT report files.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "fecov_generateTestPlan": "npm run build && node --loader ts-node/esm src/generateTestPlan.ts",
     "fecov_generateTestRunResults": "npm run build && node --loader ts-node/esm src/generateTestRunResults.ts",
   "fecov_generateTestReport": "npm run build && node --loader ts-node/esm src/generateTestReport.ts",
-  "fecov_rbt": "npm run build && node --loader ts-node/esm src/generateRiskReport.ts"
+  "fecov_rbt": "npm run build && node --loader ts-node/esm src/generateRiskReport.ts",
+  "fecov_FECOVRBT": "npm run build && node --loader ts-node/esm src/generateFecovRBTReport.ts"
   },
   "dependencies": {
     "js-yaml": "^4.1.0",
